--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <title>Carlos A. Resume</title>
   <meta name="description" content="Carlos Aguilar Resume">
 
-  <link rel="canonical" href="https://neko250.github.io/resume/">
+  <link rel="canonical" href="https://neko250.github.io/resumehttps://neko250.github.io/resume/">
 
-  <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/assets/css/icard_resume.css">
-  <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://neko250.github.io/resume/assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://neko250.github.io/resume/assets/css/icard_resume.css">
+  <link rel="stylesheet" href="https://neko250.github.io/resume/assets/css/font-awesome.min.css">
 
   <link rel="icon" type="image/png" href="/assets/img/avatar.png">
 
