--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <title>Carlos A. Resume</title>
   <meta name="description" content="Carlos Aguilar Resume">
 
-  <link rel="canonical" href="https://neko250.github.io/resumehttps://neko250.github.io/resume/">
+  <link rel="canonical" href="https://neko250.github.io/resume/">
 
-  <link rel="stylesheet" href="https://neko250.github.io/resume/assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://neko250.github.io/resume/assets/css/icard_resume.css">
-  <link rel="stylesheet" href="https://neko250.github.io/resume/assets/css/font-awesome.min.css">
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/icard_resume.css">
+  <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 
   <link rel="icon" type="image/png" href="/assets/img/avatar.png">
 
@@ -38,7 +38,7 @@
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="col-sm-4">
-                <img src="../assets/img/avatar.png" title="Avatar" alt="My Avatar">
+                <img src="assets/img/avatar.png" title="Avatar" alt="My Avatar">
                 <h4>Carlos Aguilar</h4>
                 <p>Software Engineering Student</p>
                 <p class="muted">Malaga, Spain</p>
@@ -395,8 +395,9 @@
         </div>
     </div>
 </div>
-<script type="text/javascript" src="/assets/js/jquery.min.js"></script>
-<script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="assets/js/jquery.min.js"></script>
+<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+
 	<!--
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
