--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="assets/css/icard_resume.css">
   <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 
-  <link rel="icon" type="image/png" href="/assets/img/avatar.png">
+  <link rel="icon" type="image/png" href="assets/img/avatar.png">
 
   <!-- Google fonts -->
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans:300' type='text/css'>
