--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans:300' type='text/css'>
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' type='text/css'>
 
+  <script>
+    var host = "neko250.github.io";
+    if ((host == window.location.host) && (window.location.protocol != "https:"))
+      window.location.protocol = "https://";
+  </script>
+
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
