--- a/index.html
+++ b/index.html
@@ -56,11 +56,9 @@
                 <p><i class="fa fa-linkedin-square fa-fw"></i> <a href="https://linkedin.com/in/carlosaguilardev" target="_blank"> linkedin.com/in/carlosaguilardev </a></p>
                 <p><i class="fa fa-twitter fa-fw"></i> <a href="https://twitter.com/Neko250" target="_blank">  @Neko250 </a></p>
             </div>
-            <!--
             <div class="col-sm-4 visible-md-block visible-lg-block">
-                <a href="#" class="btn btn-dark"><i class="icon-file icon-white"></i> Download.pdf</a>
+                <a href="assets/doc/Carlos_Aguilar-Resume.pdf" class="btn btn-dark"><i class="icon-file icon-white"></i> Download.pdf</a>
             </div>
-            -->
         </div>
     </div>
 </div>
